--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post) do |f| %>
+<%= form_for @post, remote: true do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -10,36 +10,33 @@
       </ul>
     </div>
   <% end %>
+  <div><%= hidden_field_tag :user_id, current_user.id%></div>
+  <div><%= hidden_field_tag :lat %></div>
+  <div><%= hidden_field_tag :lon %></div>
 
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control', required: true %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class: 'form-control', required: true, cols: 3  %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
   <div class="field">
-    <%= f.label :lat %><br>
-    <%= f.text_field :lat %>
-  </div>
-  <div class="field">
-    <%= f.label :lon %><br>
-    <%= f.text_field :lon %>
-  </div>
-  <div class="field">
-    <%= f.label :likes %><br>
-    <%= f.number_field :likes %>
-  </div>
-  <div class="field">
     <%= f.label :picture_url %><br>
     <%= f.text_field :picture_url %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Demand', class: 'btn btn-primary'%>
   </div>
 <% end %>
+<script>
+    navigator.geolocation.getCurrentPosition(function(position) {
+      document.querySelector('#post_lat').value = position.coords.latitude;
+      document.querySelector('#post_lon').value = position.coords.longitude;
+    });
+</script>
