--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,5 +35,18 @@
   <%= @post.picture_url %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %>
+<div class= "new-comment-form" style = "display:none">
+</div>
+
+<div class="btn-group">
+  <%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-info' %>
+  <%= link_to 'Delete', post_path(@post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+  <%= link_to 'Comment', new_post_comment_path(@post), class: 'btn btn-success',remote: true %>
+
+</div>
+
+<div id= "comments_list">
+  <div class="comments-list-render"> 
+  </div>
+  <%= render @comments %>
+</div>
