--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 <p><%=@user.email%></p>
 <p><%=@user.country%></p>
 <p><%=@user.city%></p>
+<section class="stats">
+       <%= render 'shared/stats' %>
+</section>
+<%= render 'follow_form' if user_signed_in? %>
 <div class = "panel panel-default" id ="posts">
   <div class "panel-body">
     <ul class= "media-list">
