empire strikes back

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<article data-user-id="<%= comment.user.id %>">
+<article data-user-id="<%= comment.user_id %>">
 <div class="comment" data-id="<%= comment.id %>">
 
 	<p class="comment-title"><%=  comment.title %></p>
