--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,7 @@
+<article data-user-id="<%= post.user_id %>">
+<div class="post" data-id="<%= post.id %>">
+
 <li class = "post item">
-  <div class="post" data-id="<%= post.id %>">
 
     <h2 class="post-title"><%= link_to post.title, post_path(post) %></h2>
     <p class="post-description"><%= truncate(post.description, length: 350) %></p>
@@ -17,5 +19,6 @@
       <div class="editform" style="display:none">
       </div>
     </div>
-  </div>
-</li>
+ </li>
+</div>
+</article>
