--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
   <h1>Demands</h1>
 
   <br>
-  
+
   <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large', remote: true %>
 
   <div class= "new-post-form" style = "display:none">
@@ -13,7 +13,8 @@
   <div class = "panel panel-default" id ="posts">
     <div class "panel-body">
       <ul class= "media-list">
-        <%= render @posts %>
+        <%= render 'posts/posts', posts: @posts %>
+
       </ul>
     </div>
   </div>
