connection.rb kaldirildir3

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -34,9 +34,10 @@
     <%= f.submit 'Demand', class: 'btn btn-primary'%>
   </div>
 <% end %>
-<script>
+<!--<script>
     navigator.geolocation.getCurrentPosition(function(position) {
       document.querySelector('#lat').value = position.coords.latitude;
       document.querySelector('#lon').value = position.coords.longitude;
     });
 </script>
+-->
