--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,6 +12,11 @@
 
   <div class = "panel panel-default" id ="posts">
     <div class "panel-body">
+      <div class "div-newDemand" style = "display:none">
+        <span class="newDemand">0</span>
+          <p>new demands</p>
+      </div>
+
       <ul class= "media-list">
         <%= render 'posts/posts', posts: @posts %>
 
