--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.div-newDemand{
+  width:710px;
+  float:left;
+  border-bottom:1px #000000 solid;
+  font-weight:bold;
+  display:none;
+}
