--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,8 +11,8 @@
   </div>
 
   <div class = "panel panel-default" id ="posts">
-    <div class "panel-body">
-      <div class "div-newDemand" >
+    <div class = "panel-body">
+      <div class= "div-newDemand" style = "display:none" >
         <span class="newDemand">0</span>
           <p>new demands</p>
       </div>
