--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,10 @@
   <h1>Demands</h1>
 
   <br>
-
+  <% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+    <%= link_to tag.name, tag_path(tag.name), :class => css_class %>
+  <% end %>
+  <br>
   <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large', remote: true %>
 
   <div class= "new-post-form" style = "display:none">
