--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,6 +30,10 @@
     <%= f.label :picture_url %><br>
     <%= f.text_field :picture_url %>
   </div>
+  <div class="form-group">
+     <%= f.label :label_list %>
+     <%= f.text_area :label_list, placeholder: "Tags separated with comma" %>
+   </div>
   <div class="actions">
     <%= f.submit 'Demand', class: 'btn btn-primary'%>
   </div>
