--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,4 +1,7 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
- 
+.css1 { font-size: 2em;}
+.css2 { font-size: 3em;}
+.css3 { font-size: 4em;}
+.css4 { font-size: 5em;}
