--- a/app/views/tags/_unfollow.html.erb
+++ b/app/views/tags/_unfollow.html.erb
@@ -1,4 +1,6 @@
+<div class = "unfollowDiv">
 <%= form_tag({:controller => "tags", :action => "unfollow"},method: :delete, remote: true) do  %>
 <div><%= hidden_field_tag :followed_tag_id, @current_tag_id%></div>
   <%= submit_tag "Unfollow", class: "btn" %>
 <% end %>
+</div>
