--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       </ul>
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
+        <%= image_tag current_user.avatar.url(:thumb) %>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <%= current_user.name %>
