--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,6 +3,22 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+  <div class="file_field">
+    <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
+    <%= f.label :avatar %>
+    <%= f.file_field :avatar %>
+  </div>
+  <div class="file_field">
+    <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
+    <%= f.label :avatar %>
+     <%= f.text_field :remote_avatar %>
+  </div>
+  <div class="file_field">
+  <label>
+    <%= f.check_box :remove_avatar %>
+  Remove avatar
+    </label>
+    </div>
 
   <div class="field">
     <%= f.label :name %>
