--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,10 +26,9 @@
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
-  <div class="field">
-    <%= f.label :picture_url %><br>
-    <%= f.text_field :picture_url %>
-  </div>
+<div class="field">
+  <%= form.file_field :pictures, multiple: true %>
+</div>
   <div class="form-group">
      <%= f.label :label_list %>
      <%= f.text_area :label_list, placeholder: "Tags separated with comma" %>
