--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.number_field :price %>
   </div>
 <div class="field">
-  <%= form.file_field :pictures, multiple: true %>
+  <%= f.file_field :pictures, multiple: true %>
 </div>
   <div class="form-group">
      <%= f.label :label_list %>
