--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -18,7 +18,7 @@
 
     <div class="btn-group">
       <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info', remote: true%>
-      <%= link_to 'Destroy',  posts_path, data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+      <%= link_to 'Destroy',  post_path(post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
     </div>
     <div class="name">
     <p>Demanded by: <%= link_to User.find_by(id: post.user_id).name, user_path(post.user_id) %>, at: <%= post.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
