--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @post, {html: {multipart: true}},  remote: true do |f| %>
+<%= form_for @post, remote: true do |f| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -27,6 +27,7 @@
     <%= f.number_field :price %>
   </div>
 <div class="field">
+  <%= f.file_field :pictures, multiple: true %>
   <%= f.file_field :pictures, multiple: true %>
 </div>
   <div class="form-group">
