carrier multi denemeleri3

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,8 +26,8 @@
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
-<div class="field">
-  <%= f.file_field :pictures, multiple: true %>
+<div class="file_field_picture">
+  <a href='#' class="btn btn-success">Button Text</a>
   <%= f.file_field :pictures, multiple: true %>
 </div>
   <div class="form-group">
