--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -27,7 +27,7 @@
     <%= f.number_field :price %>
   </div>
 <div class="file_field_picture">
-  <a href='#' class="btn btn-success">Button Text</a>
+  <a href='#' class="btn btn-success" id="multiple_upload_butt">Button Text</a>
   <%= f.file_field :pictures, multiple: true %>
 </div>
   <div class="form-group">
