carrier multi denemeleri8

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,7 +8,7 @@
     <%= link_to tag.name, tag_path(tag.name), :class => css_class %>
   <% end %>
   <br>
-  <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large',id: "newDemandButton" remote: true %>
+  <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large',id: "newDemandButton", remote: true %>
 
   <div class= "new-post-form" style = "display:none">
   </div>
