carrier multi denemelerixii

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -39,7 +39,7 @@
     <%= f.submit 'Demand', class: 'btn btn-primary'%>
   </div>
 <% end %>
-<script type="text/coffescript">
+<script type="text/coffeescript">
   file_field_picture = document.getElementById('multiple_upload_butt')
   file_field_picture.onclick = ->
     alert("anan")
