--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,4 +1,6 @@
 var $postdiv = $('div.new-post-form');
 $postdiv.html("<%= escape_javascript(render(:partial => "form"))%>");
 $postdiv.toggle();
- 
+var $file_field_picture = $('#multiple_upload_butt');
+file_field_picture.onclick = ->
+  alert("anan")
