custom user edit

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,79 +1,109 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container">    
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="active">
+      <a href="#profile" role="tab" data-toggle="tab">
+        <icon class="fa fa-user"></icon> Profile Settings
+      </a>
+    </li>
+    <li>
+      <a href="#security" role="tab" data-toggle="tab">
+        <i class="fa fa-cog"></i> Security Settings
+      </a>
+    </li>
+  </ul>
+    
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div class="tab-pane fade" id="profile">
+        <h2>Edit Image<%= resource_name.to_s.humanize %></h2>
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        <div class="file_field">
+          <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
+          <%= f.label :avatar %>
+          <%= f.file_field :avatar %>
+        </div>
+        <div class="file_field">
+          <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
+          <%= f.label :avatar %>
+          <%= f.text_field :remote_avatar_url %>
+        </div>
+        <div class="file_field">
+          <label>
+            <%= f.check_box :remove_avatar %>
+            Remove avatar
+          </label>
+        </div>
+        <div class="actions">
+          <%= f.submit "Update" %>
+        </div>
+      <% end %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= link_to "Back", :back %>
 
-  <div class="file_field">
-    <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
-    <%= f.label :avatar %>
-    <%= f.file_field :avatar %>
-  </div>
-  <div class="file_field">
-    <%= image_tag(@user.avatar.url(:small_thumb)) if @user.avatar? %>
-    <%= f.label :avatar %>
-     <%= f.text_field :remote_avatar_url %>
-  </div>
-  <div class="file_field">
-  <label>
-    <%= f.check_box :remove_avatar %>
-  Remove avatar
-    </label>
     </div>
+    <div class="tab-pane fade" id="security">
+      <h2>Edit Profile<%= resource_name.to_s.humanize %></h2>
 
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name%>
-  </div>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :user_name %>
-    <%= f.text_field :user_name%>
-  </div>
+      <div class="field">
+        <%= f.label :name %>
+        <%= f.text_field :name%>
+      </div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true  %>
-  </div>
+      <div class="field">
+        <%= f.label :user_name %>
+        <%= f.text_field :user_name%>
+      </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="field">
+        <%= f.label :email %>
+        <%= f.email_field :email, autofocus: true  %>
+      </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control estimate-password' %>
-    <% if @validatable %>
-      <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
-    <% end %>
-  </div>
+      <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+      <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+      <% end %>
 
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control estimate-password' %>
-  </div>
+      <div class="field">
+        <%= f.label :password %>
+        <%= f.password_field :password, autocomplete: "off", class: 'form-control estimate-password' %>
+        <% if @validatable %>
+          <span class="help-block"><%= @minimum_password_length %> characters minimum</span>
+        <% end %>
+      </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
+      <div class="field">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control estimate-password' %>
+      </div>
 
-  <div class="field">
-    <%= f.label :country %>
-    <%= f.text_field :country%>
-  </div>
+      <div class="field">
+        <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "off" %>
+      </div>
 
-  <div class="field">
-    <%= f.label :city %>
-    <%= f.text_field :city%>
-  </div>
+      <div class="field">
+        <%= f.label :country %>
+        <%= f.text_field :country%>
+      </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+      <div class="field">
+        <%= f.label :city %>
+        <%= f.text_field :city%>
+      </div>
 
-<h3>Cancel my account</h3>
+      <div class="actions">
+        <%= f.submit "Update" %>
+      </div>
+      <% end %>
+      <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+      <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+      <%= link_to "Back", :back %>
+    </div>
+  </div>   
+</div>
