--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
     
   <!-- Tab panes -->
   <div class="tab-content">
-    <div class="tab-pane fade" id="profile">
+    <div class="tab-pane fade active in" id="profile">
         <h2>Edit Image<%= resource_name.to_s.humanize %></h2>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
