--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
     
   <!-- Tab panes -->
   <div class="tab-content">
-    <div class="tab-pane fade active in" id="profile">
+    <div class="tab-pane active" id="profile">
         <h2>Edit Image<%= resource_name.to_s.humanize %></h2>
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
@@ -43,7 +43,7 @@
       <%= link_to "Back", :back %>
 
     </div>
-    <div class="tab-pane fade" id="security">
+    <div class="tab-pane" id="security">
       <h2>Edit Profile<%= resource_name.to_s.humanize %></h2>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
