--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,7 +10,7 @@
   <br>
   <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large',id: "newDemandButton", remote: true %>
 
-  <div class= "new-post-form" style = "display:none">
+  <div class= "new-post-form" style = "display:none" id="id-new-post-form">
   </div>
 
   <div class = "panel panel-default" id ="posts">
