--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -23,5 +23,9 @@
     <div class="name">
     <p>Demanded by: <%= link_to User.find_by(id: post.user_id).name, user_path(post.user_id) %>, at: <%= post.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
     </div>
+    <div class="post_form-edit" data-id="<%= post.id %>">
+      <div class="editform" style="display:none">
+    </div>
+  </div>
 </div>
 </article>
