--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -41,8 +41,8 @@
     <%= f.file_field :pictures, multiple: true %>
   </div>
   <div class="form-group">
-     <%= f.label :label_list %>
-     <%= f.text_area :label_list, placeholder: "Tags separated with comma" %>
+     <%= f.label :all_label_list %>
+     <%= f.text_area :all_label_list, placeholder: "Tags separated with comma" %>
    </div>
   <div class="actions">
     <%= f.submit 'Demand', class: 'btn btn-primary'%>
