--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -3,16 +3,16 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h1><%= @user.name %></h1>
-      <span><%= image_tag @user.avatar_url, alt: current_user.name,size: "32" %></span>
+      <span><%= image_tag current_user.avatar.url(:small_thumb) %></span>
       <span><%= link_to "view my profile", @user %></span>
-      <span><b>Stories:</b> <%= @user.stories.count %></span>
+      <span><b>Posts:</b> <%= @user.posts.count %></span>
     </section>
     <section class="stats">
       <%= render 'shared/stats' %>
       <% if @users.any? %>
         <div class="user_avatars">
           <% @users.each do |user| %>
-          <span><%= image_tag user.avatar_url, alt: user.name,size: "32" %></span>
+          <span><%= image_tag current_user.avatar.url(:small_thumb) %></span>
           <% end %>
         </div>
       <% end %>
