--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
   <%= action_cable_meta_tag %>
   <meta name="current-user" id="<%= current_user.try(:id) %>">
+  <meta name="viewport" content="width=device-width">
 </head>
 <body>
 	<!-- dropdown menu from sitepoint's devise tutorial -->
