--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -13,5 +13,7 @@
       <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info' %>
       <%= link_to 'Delete', post_path(post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
     </div>
+    <p>Demanded by: <%= link_to User.find_by(id: post.user_id).name, user_path(post.user_id) %>, at: <%= post.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
+    </div>
   </div>
 <% end %>
