--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
   <h1>Search Demands</h1>
   <%= form_tag posts_path, method: :get do %>
     <div class="form-group">
-      <%= text_field_tag :query, params[:query], class: 'form-control' %>
+      <%= text_field_tag :query, params[:query], class: 'form-control typeahead' %>
       <%= submit_tag 'Search', class: 'btn btn-primary' %>
     </div>
   <% end %>
