--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form-group">
     <%= label_tag 'recipients', 'Choose recipients' %>
-    <%= select_tag 'recipients', recipients_options, multiple: true, class: 'form-control chosen-it' %>
+    <%= select_tag 'recipients', recipients_options, multiple: true, class: 'form-control',id: 'select2-new-message' %>
   </div>
 
   <%= submit_tag 'Send', class: 'btn btn-primary' %>
