--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -40,9 +40,9 @@
   <div class="file_field_picture_3" style = "display:none">
     <%= f.file_field :pictures, multiple: true %>
   </div>
-  <div class="form-group">
+  <div class="form-group" >
      <%= f.label :all_labels_list %>
-     <%= f.text_area :all_labels_list, placeholder: "Tags separated with comma" %>
+     <%= f.text_field :all_labels_list, placeholder: "Tags separated with comma",id: "select2-label-list" %>
    </div>
   <div class="actions">
     <%= f.submit 'Demand', class: 'btn btn-primary'%>
