--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,6 +1,5 @@
-$("#select2-label-list").select2({
+$(".select2-label-list").select2({
   placeholder: "Tags separated with comma"
-  tags: true
 });
 var $postdiv = $('div.new-post-form');
 $postdiv.html("<%= escape_javascript(render(:partial => "form"))%>");
