--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -40,7 +40,7 @@
   <div class="file_field_picture_3" style = "display:none">
     <%= f.file_field :pictures, multiple: true %>
   </div>
-  <div class="form-group select2-labels">
+  <div class="form-group">
      <%= f.label :all_labels_list %>
      <%= f.select(:all_labels_list,Post.first.all_labels_list,{},{class: "select2-label-list" ,id: "select2-label-list",multiple: "multiple", :style => "width:700px;"}) %>
    </div>
