--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,3 +1,8 @@
+jQuery(function() {
+  return $("#select2-label-list").select2({
+    tags: true
+  });
+});
 var $postdiv = $('div.new-post-form');
 $postdiv.html("<%= escape_javascript(render(:partial => "form"))%>");
 $postdiv.toggle();
