--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -19,7 +19,9 @@
     </div>
 
     <div class="btn-group">
-      <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info', remote: true%>
+      <% if policy(post).edit? %>
+        <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info', remote: true%>
+      <%end%>
       <% if policy(post).destroy? %>
         <%= link_to 'Destroy',  post_path(post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
       <%end%>
