--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
               <%= image_tag current_user.avatar.url(:small_thumb) %>
-          <li class="dropdown">
+          <li class="dropdown" data-behavior="notifications">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <%= current_user.name %>
               <span class="caret"></span>
