--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
       </ul>
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
-              <%= image_tag current_user.avatar.url(:small_thumb) %>
-          <li class="dropdown" data-behavior="notifications">
+          <%= image_tag current_user.avatar.url(:small_thumb) %>
+          <li class="dropdown" >
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <%= current_user.name %>
               <span class="caret"></span>
@@ -34,6 +34,18 @@
               <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
+          <li class="nav-item btn-group" data-behavior="notifications">
+         <a class="dropdown-toggle nav-link" type="button" data-behavior="notifications-link" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <%= fa_icon "bell" %> <span data-behavior="unread-count"></span>
+          </a>
+         <div class="dropdown-menu" aria-labelledby="dropdownMenu1" data-behavior="notification-items">
+            <!--
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <a class="dropdown-item" href="#">Something else here</a>
+            -->
+          </div>
+        </li>
         <% else %>
           <li><%= link_to 'Log In', new_user_session_path %></li>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
