--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@ from sitepoint devise tutorial
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'bootstrap/theme';
+@import "font-awesome";
 
 
 /* to style Devise specific flash messages, from Sitepoint */
