--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="file_field_picture" >
       <span class="file-input btn btn-primary btn-file">
-        <%= f.file_field :pictures, multiple: true %>
+         Browse&hellip;<%= f.file_field :pictures, multiple: true %>
       </span>
   </div>
 
