file upload düzeltme4

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -29,7 +29,7 @@
 
   <div class="file_field_picture" >
       <span class="file-input btn btn-primary btn-file">
-         Browse&hellip;<%= f.file_field :pictures, multiple: true,id: "file_upload_button" %>
+         Browse&hellip;<%= f.file_field :pictures, multiple: true%>
       </span>
   </div>
 
