--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -13,7 +13,9 @@
 
     <% end %>
     </div>
-
+    <div id="likes">
+      <%=render partial: "likes" %>
+    </div>
     <div class="post-tags">
         <%=raw tag_links(post.all_labels_list)%>
     </div>
