--- a/app/views/posts/_likes.html.erb
+++ b/app/views/posts/_likes.html.erb
@@ -1,5 +1,5 @@
-<% if user_signed_in? && current_user.likes?(@post) %>
-  <%= link_to "Unlike", post_like_path(@post), method: :delete %>
+<% if user_signed_in? && current_user.likes?(post) %>
+  <%= link_to "Unlike", post_like_path(post), method: :delete %>
 <%else%>
-  <%= link_to "Like", post_like_path(@post), method: :post %>
+  <%= link_to "Like", post_like_path(post), method: :post %>
 <%end%>
