--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -26,7 +26,7 @@
     <p>Demanded by: <%= link_to User.find_by(id: post.user_id).name, user_path(post.user_id) %>, at: <%= post.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
     </div>
     <div class="post_form-edit" data-id="<%= post.id %>">
-      <div class="editform" style="display:none">
+      <div class="modal fade" class="editform" style="display:none">
     </div>
   </div>
 </div>
