--- a/app/views/posts/_formTest.html.erb
+++ b/app/views/posts/_formTest.html.erb
@@ -39,13 +39,11 @@
 
         <div class="form-group">
            <%= f.label :all_labels_list %>
-           <%= f.select(:all_labels_list,{},{},{class: "form-control" ,id: "select2-label-list",multiple: "multiple"}) %>
+           <%= f.select(:all_labels_list,@post.all_labels_list,{},{class: "form-control" ,id: "select2-label-list",multiple: "multiple"}) %>
          </div>
-        <div class="actions">
-          <%= f.submit 'Demand', class: 'btn btn-primary'%>
-        </div>
+
       <div class="modal-footer">
-        <%= f.submit class: "btn btn-primary" %>
+        <%= f.submit "Update Demand", class: "btn btn-primary" %>
         <%= link_to "Cancel", "#", class: "btn", data: {dismiss: "modal"} %>
       </div>
     <% end %>
