--- a/app/views/posts/_formEdit.html.erb
+++ b/app/views/posts/_formEdit.html.erb
@@ -50,7 +50,7 @@
          </div>
 
       <div class="modal-footer">
-        <%= f.submit "Update Demand", class: "btn btn-primary" %>
+        <%= f.submit "Demand", class: "btn btn-primary" %>
         <%= link_to "Cancel", "#", class: "btn", data: {dismiss: "modal"} %>
       </div>
     <% end %>
