--- a/app/views/posts/new.js.erb
+++ b/app/views/posts/new.js.erb
@@ -1,6 +1,7 @@
 var $postdiv = $('div.new-post-form');
-$postdiv.html("<%= escape_javascript(render(:partial => "form"))%>");
-$postdiv.toggle();
+$postdiv.html("<%= escape_javascript(render(:partial => "new"))%>");
+$postdiv.modal("show");
+//$postdiv.toggle();
 //var $multiple_upload_butt = $('#multiple_upload_butt');
 //var index=0;
 //$multiple_upload_butt.click(function() {
