--- a/app/views/posts/edit.js.erb
+++ b/app/views/posts/edit.js.erb
@@ -1,4 +1,3 @@
-var $postdiv = $('div.post_form-edit[data-id="<%= @post.id %>"]');
-$postdiv.find('#editform').html("<%= escape_javascript(render(:partial => "edit"))%>");
-$postdiv.find('#editform').modal("show");
-//$postdiv.find('#editform').toggle();
+var $postdiv = $('div#new-post-form');
+$postdiv.html("<%= escape_javascript(render(:partial => "edit"))%>");
+$postdiv.modal("show");
